mengganti gambar dan menambahkan testimoni

--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
             <div class="col-lg-6">
               <div class="text-start mx-auto mb-5 wow slideInLeft" data-wow-delay="0.1s">
                 <h1 class="mb-3">Property Listing</h1>
-                <p>Eirmod sed ipsum dolor sit rebum labore magna erat. Tempor ut dolore lorem kasd vero ipsum sit eirmod sit diam justo sed rebum.</p>
+                <p>Tersedia pilihan harga sesuai kebutuhan anda dan dengan fasilitas yang berbeda dengan tetap memberikan kenyamanan unutuk keluarga.</p>
               </div>
             </div>
             <!-- <div class="col-lg-6 text-start text-lg-end wow slideInRight" data-wow-delay="0.1s">
@@ -303,8 +303,8 @@
                       <!-- <div class="bg-white rounded-top text-primary position-absolute start-0 bottom-0 mx-4 pt-1 px-3">Appartment</div> -->
                     </div>
                     <div class="p-4 pb-0">
-                      <h5 class="text-primary mb-3">Rp12,345</h5>
-                      <a class="d-block h5 mb-2" href="">Type 30/50</a>
+                      <h5 class="text-primary mb-3">Rp 700,000,000</h5>
+                      <a class="d-block h5 mb-2" href="">Type 30/50 | 1 Lantai</a>
                       <p><i class="fa fa-map-marker-alt text-primary me-2"></i>Gunungsari Indah, Surabaya</p>
                     </div>
                     <div class="d-flex border-top">
@@ -322,8 +322,8 @@
                       <div class="bg-white rounded-top text-primary position-absolute start-0 bottom-0 mx-4 pt-1 px-3">Villa</div> -->
                     </div>
                     <div class="p-4 pb-0">
-                      <h5 class="text-primary mb-3">Rp12,345</h5>
-                      <a class="d-block h5 mb-2" href="">48/50</a>
+                      <h5 class="text-primary mb-3">Rp 800,000,000</h5>
+                      <a class="d-block h5 mb-2" href="">Type 48/50 | 2 Lantai</a>
                       <p><i class="fa fa-map-marker-alt text-primary me-2"></i>Gunungsari Indah, Surabaya</p>
                     </div>
                     <div class="d-flex border-top">
@@ -341,8 +341,8 @@
                       <div class="bg-white rounded-top text-primary position-absolute start-0 bottom-0 mx-4 pt-1 px-3">Office</div> -->
                     </div>
                     <div class="p-4 pb-0">
-                      <h5 class="text-primary mb-3">Rp12,345</h5>
-                      <a class="d-block h5 mb-2" href="">66/60</a>
+                      <h5 class="text-primary mb-3">Rp 1,000,000,000</h5>
+                      <a class="d-block h5 mb-2" href="">Type 66/60 | 2 Lantai</a>
                       <p><i class="fa fa-map-marker-alt text-primary me-2"></i>Gunungsari Indah, Surabaya</p>
                     </div>
                     <div class="d-flex border-top">
@@ -760,7 +760,7 @@
             <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
               <div class="team-item rounded overflow-hidden">
                 <div class="position-relative">
-                  <img class="img-fluid" src="img/produk4.jpg" alt="" />
+                  <img class="img-fluid" src="img/produk5.jpg" alt="" />
                   <div class="position-absolute start-50 top-100 translate-middle d-flex align-items-center">
                     <a class="btn btn-square mx-1" href=""><i class="fab fa-facebook-f"></i></a>
                     <a class="btn btn-square mx-1" href=""><i class="fab fa-twitter"></i></a>
@@ -768,15 +768,15 @@
                   </div>
                 </div>
                 <div class="text-center p-4 mt-3">
-                  <h5 class="fw-bold mb-0">Full Name</h5>
-                  <small>Designation</small>
+                  <h5 class="fw-bold mb-0">Promo Special</h5>
+                  <small>Banyak promo dan free biaya</small>
                 </div>
               </div>
             </div>
             <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
               <div class="team-item rounded overflow-hidden">
                 <div class="position-relative">
-                  <img class="img-fluid" src="img/produk4.jpg" alt="" />
+                  <img class="img-fluid" src="img/produk6.jpg" alt="" />
                   <div class="position-absolute start-50 top-100 translate-middle d-flex align-items-center">
                     <a class="btn btn-square mx-1" href=""><i class="fab fa-facebook-f"></i></a>
                     <a class="btn btn-square mx-1" href=""><i class="fab fa-twitter"></i></a>
@@ -784,8 +784,8 @@
                   </div>
                 </div>
                 <div class="text-center p-4 mt-3">
-                  <h5 class="fw-bold mb-0">Full Name</h5>
-                  <small>Designation</small>
+                  <h5 class="fw-bold mb-0">Serah Terima</h5>
+                  <small>Proses serah terima sesuai jadwal</small>
                 </div>
               </div>
             </div>
@@ -804,36 +804,48 @@
           <div class="owl-carousel testimonial-carousel wow fadeInUp" data-wow-delay="0.1s">
             <div class="testimonial-item rounded p-3" style="background: #f7efe5">
               <div class="bg-white border rounded p-4">
-                <p>Tempor stet labore dolor clita stet diam amet ipsum dolor duo ipsum rebum stet dolor amet diam stet. Est stet ea lorem amet est kasd kasd erat eos</p>
+                <p>Setelah cek kelokasi dan melihat area dan progres yang akan dijalankan keputusan membeli rumah semakin bulat dan mengetahui Developer yang berpengalaman semakin yakin.</p>
                 <div class="d-flex align-items-center">
-                  <img class="img-fluid flex-shrink-0 rounded" src="img/testimonial-1.jpg" style="width: 45px; height: 45px" />
+                  <img class="img-fluid flex-shrink-0 rounded" src="img/testimoni1.jpg" style="width: 45px; height: 45px" />
                   <div class="ps-3">
-                    <h6 class="fw-bold mb-1">Client Name</h6>
-                    <small>Profession</small>
+                    <h6 class="fw-bold mb-1">Fransisca</h6>
+                    <small>Owner</small>
                   </div>
                 </div>
               </div>
             </div>
             <div class="testimonial-item rounded p-3" style="background: #f7efe5">
               <div class="bg-white border rounded p-4">
-                <p>Tempor stet labore dolor clita stet diam amet ipsum dolor duo ipsum rebum stet dolor amet diam stet. Est stet ea lorem amet est kasd kasd erat eos</p>
+                <p>Akses ke lokasi sangat mudah dan bisa di tempuh dengan sangat singkat mempermudah aktivitas sehari-hari serta kenyamanan lokasi dan hunian.</p>
                 <div class="d-flex align-items-center">
-                  <img class="img-fluid flex-shrink-0 rounded" src="img/testimonial-2.jpg" style="width: 45px; height: 45px" />
+                  <img class="img-fluid flex-shrink-0 rounded" src="img/testimoni2.jpg" style="width: 45px; height: 45px" />
                   <div class="ps-3">
-                    <h6 class="fw-bold mb-1">Client Name</h6>
-                    <small>Profession</small>
+                    <h6 class="fw-bold mb-1">Andhika Wisnu</h6>
+                    <small>Profesional</small>
                   </div>
                 </div>
               </div>
             </div>
             <div class="testimonial-item rounded p-3" style="background: #f7efe5">
               <div class="bg-white border rounded p-4">
-                <p>Tempor stet labore dolor clita stet diam amet ipsum dolor duo ipsum rebum stet dolor amet diam stet. Est stet ea lorem amet est kasd kasd erat eos</p>
+                <p>Awalnya liat-liat setelah mendapatkan penjelasan dari marketing dan fasilatas apa yang tersedia, akhirnya diputuskan membeli dan aksesnya mudah.</p>
                 <div class="d-flex align-items-center">
-                  <img class="img-fluid flex-shrink-0 rounded" src="img/testimonial-3.jpg" style="width: 45px; height: 45px" />
+                  <img class="img-fluid flex-shrink-0 rounded" src="img/testimoni3.jpg" style="width: 45px; height: 45px" />
                   <div class="ps-3">
-                    <h6 class="fw-bold mb-1">Client Name</h6>
-                    <small>Profession</small>
+                    <h6 class="fw-bold mb-1">Cristina</h6>
+                    <small>Manager</small>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="testimonial-item rounded p-3" style="background: #f7efe5">
+              <div class="bg-white border rounded p-4">
+                <p>Bisa memiliki rumah impian akhirnya terlaksanan setelah memilih alana regency banyak pilihan dan fasilitas yang akan membuat nyaman dan keluarga happy.</p>
+                <div class="d-flex align-items-center">
+                  <img class="img-fluid flex-shrink-0 rounded" src="img/testimoni4.jpg" style="width: 45px; height: 45px" />
+                  <div class="ps-3">
+                    <h6 class="fw-bold mb-1">Wismoyo</h6>
+                    <small>Kontraktor</small>
                   </div>
                 </div>
               </div>
