menghapus image dan merubah testimoni

--- a/index.html
+++ b/index.html
@@ -804,7 +804,7 @@
           <div class="owl-carousel testimonial-carousel wow fadeInUp" data-wow-delay="0.1s">
             <div class="testimonial-item rounded p-3" style="background: #f7efe5">
               <div class="bg-white border rounded p-4">
-                <p>Setelah cek kelokasi dan melihat area dan progres yang akan dijalankan keputusan membeli rumah semakin bulat dan mengetahui Developer yang berpengalaman semakin yakin.</p>
+                <p>Setelah cek kelokasi dan melihat area dan progres yang akan dijalankan keputusan membeli rumah semakin bulat dan Developer yang berpengalaman.</p>
                 <div class="d-flex align-items-center">
                   <img class="img-fluid flex-shrink-0 rounded" src="img/testimoni1.jpg" style="width: 45px; height: 45px" />
                   <div class="ps-3">
@@ -840,7 +840,7 @@
             </div>
             <div class="testimonial-item rounded p-3" style="background: #f7efe5">
               <div class="bg-white border rounded p-4">
-                <p>Bisa memiliki rumah impian akhirnya terlaksanan setelah memilih alana regency banyak pilihan dan fasilitas yang akan membuat nyaman dan keluarga happy.</p>
+                <p>Bisa memiliki rumah impian akhirnya terlaksanan setelah memilih alana regency banyak pilihan dan fasilitas yang akan membuat nyaman keluarga.</p>
                 <div class="d-flex align-items-center">
                   <img class="img-fluid flex-shrink-0 rounded" src="img/testimoni4.jpg" style="width: 45px; height: 45px" />
                   <div class="ps-3">
