--- a/index.html
+++ b/index.html
@@ -675,7 +675,7 @@
                     <h1 class="mb-3">Hubungi Agen Kami</h1>
                     <p>Agen kami dengan senang hati akan melayani anda, segera hubungi kami!</p>
                   </div>
-                  <a href="" class="btn btn-primary py-3 px-4 me-2"><i class="fa fa-phone-alt me-2"></i>0895 3284 40506</a>
+                  <a href="https://wa.me/62895328440506" class="btn btn-primary py-3 px-4 me-2"><i class="fa fa-phone-alt me-2"></i>0895 3284 40506</a>
                   <!-- <a href="" class="btn btn-dark py-3 px-4"><i class="fa fa-calendar-alt me-2"></i>Get Appoinment</a> -->
                 </div>
               </div>
